# opendata-mcp

./: .coverage  .gitignore  AGENTS.md  AUTHORS  LICENSE  Makefile  README.md  pr_body.txt  pyproject.toml  system_prompt.md
.github/workflows/: action.yml  ci.yml  release.yml
C4-Documentation/: README.md  c4-code-discovery-activation.md  c4-code-provenance.md  c4-code-provider-plugins.md  c4-code-registry-routing.md  c4-code-serialization.md  c4-code-server-bootstrap.md  c4-code-tooling.md  c4-code-transport-kernel.md  c4-code-ui-resources.md  c4-component-discovery-engine.md  c4-component-mcp-apps.md  c4-component-mcp-server.md  c4-component-output-pipeline.md  c4-component-provider-plugins.md  c4-component-tooling.md  c4-component-transport-kernel.md  c4-component.md  c4-container.md  c4-context.md
C4-Documentation/apis/: meta-data-mcp-api.md
docs/: PROVENANCE_SPEC.md  PR_MERGE_CHECKLIST.md  ROADMAP.md  development-roadmap.md  hosting.md  meta-data-mcp-architecture.md  project-changelog.md  rename-to-meta-data-mcp.md
docs/adrs/: 0001-no-persistence-v2.md  0002-autogen-security.md
meta_data_mcp/: cli.py  client.py  errors.py  fields.py  health.py  provenance.py  provider_config.py  registry.py  routing.py  serialize.py  server.py  transport.py  utils.py
meta_data_mcp/discovery/: __init__.py  loader.py  state.py
meta_data_mcp/providers/: __init__.py  __template__.py  au_data_gov.py  ca_open_gov.py  cern_opendata.py  ch_sbb.py  de_db.py  eu_copernicus.py  eu_ecb.py  eu_eurostat.py  fr_data_gouv.py  global_arxiv.py  global_bgpview.py  global_coingecko.py  global_crossref.py  global_dbnomics.py  global_disease_sh.py  global_epss.py  global_europepmc.py  global_faostat.py  global_frankfurter.py  global_gbif.py  global_gdelt.py  global_imf.py  global_inaturalist.py  global_met_museum.py  global_nvd_cve.py  global_oecd.py  global_open_library.py  global_open_meteo.py  global_openalex.py  global_openaq.py  global_opensanctions.py  global_opensky.py  global_osm_nominatim.py  global_osv_dev.py  global_overpass.py  global_pubchem.py  global_rcsb_pdb.py  global_ripe_stat.py  (+39 more)
meta_data_mcp/ui_resources/: __init__.py  app_discovery_v1.html  app_discovery_v1.py  app_entity_graph_v1.html  app_entity_graph_v1.py  app_molecular_v1.html  app_molecular_v1.py  app_museum_v1.html  app_museum_v1.py  app_network_topology_v1.html  app_network_topology_v1.py  app_news_tone_v1.html  app_news_tone_v1.py  app_trade_flows_v1.html  app_trade_flows_v1.py  app_vulnerability_v1.html  app_vulnerability_v1.py  shape_geofeatures_v1.html  shape_geofeatures_v1.py  shape_records_v1.html  shape_records_v1.py  shape_timeseries_v1.html  shape_timeseries_v1.py
opendata_mcp/: cli.py  client.py  registry.py  routing.py  utils.py
scripts/: bump_version.py  install-systemd-service.sh  pr_check.sh
src/odmcp/: cli.py  (+1 more)
tests/: test_app_discovery.py  test_app_entity_graph.py  test_app_molecular.py  test_app_museum.py  test_app_vulnerability.py  test_bearer_auth.py  test_cli.py  test_errors.py  test_fields.py  test_generator.py  test_health.py  test_http_cache.py  test_provenance.py  test_provider_config.py  test_provider_discovery.py  test_registry.py  test_repo_invariants.py  test_routing.py  test_run_server.py  test_serialization.py  test_shape_geofeatures.py  test_shape_records.py  test_shape_timeseries.py  test_ui_bundle_sizes.py  test_ui_resource.py  test_ui_resources_catalog.py
tools/: generate_provider.py
(+212 files in other folders)
