[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendata-mcp"
dynamic = ["version"]
description = "Python MCP servers exposing Open Data to compatible LLM clients."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0.0",
    "click>=8.1.7",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "starlette>=1.0.0",
    "uvicorn>=0.42.0",
]

[tool.hatch.version]
path = "opendata_mcp/__init__.py"

[project.scripts]
opendata-mcp = "opendata_mcp.cli:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pyright]
include = ["opendata_mcp", "tests"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=9.0.3",
    "ruff>=0.8.1",
    "pre-commit>=4.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Configure log format
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.hatch.build.targets.wheel]
packages = ["opendata_mcp"]
