[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-data-mcp"
dynamic = ["version"]
description = "MCP server exposing 60+ open data providers to LLM clients via intelligent metadata routing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Derek Linz", email = "derek.s.linz@gmail.com" },
]
keywords = [
    "mcp",
    "open-data",
    "llm",
    "ai",
    "claude",
    "metadata",
    "routing",
    "data-discovery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "anyio>=4.0.0",
    "click>=8.1.7",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "starlette>=1.0.0",
    "uvicorn>=0.42.0",
]

[project.urls]
Homepage = "https://github.com/derekslinz/meta-data-mcp"
Repository = "https://github.com/derekslinz/meta-data-mcp"
"Bug Tracker" = "https://github.com/derekslinz/meta-data-mcp/issues"

[tool.hatch.version]
path = "opendata_mcp/__init__.py"

[project.scripts]
meta-data-mcp = "opendata_mcp.cli:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pyright]
include = ["opendata_mcp", "tests"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=9.0.3",
    "ruff>=0.8.1",
    "pre-commit>=4.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q -m 'not live'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "live: marks tests as live integration tests that make real HTTP calls (deselected by default; run with -m live)",
]


[tool.hatch.build.targets.wheel]
packages = ["opendata_mcp"]
